appId: host.exp.exponent
---
- launchApp
- openLink: ${EXPO_DEV_URL}
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn:
          point: "92%,16%"
- swipe:
    start: 50%,80%
    end: 50%,20%
    duration: 700
- tapOn: "Upload"
- assertVisible:
    text: ".*Upload antique reel.*"
